# nonebot-plugin-dotcharacter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test_standalone.py
.github/workflows/: publish.yml
nonebot_plugin_dotcharacter/: __init__.py  character_loader.py  config.py  conversation.py  llm_client.py  rate_limiter.py
